thread-collapse: touch up to fix style and behavior on error

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -742,7 +742,7 @@ form#sign_in fieldset a {
     text-align: center;
     display: block;
     margin-top: 15px;
-    margin-bottom: 15px
+    margin-bottom: 15px;
 }
 
 #thread_pagination a {
